@@ -1,3 +1,14 @@
+03/22/2021
+
+- Changed SDLX_Start and SDLX_DisplaySet() to take arguments instead of being static
+
+------------------
+
+03/18/2021
+
+- Fixed a bug where archive would require _asan symbols
+
+------------------
 
 03/17/2021
 
